objects/Order.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_ATPStatus__c</fullName>
        <description>Status of ATP</description>
        <label>ATP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Confirmed</fullName>
                </value>
                <value>
                    <fullName>Partially Confirmed</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BillToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture Bill To Account for the Order</description>
        <inlineHelpText>Bill To Account for the Order.</inlineHelpText>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Bill To Account)</relationshipLabel>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CreditExposure__c</fullName>
        <label>Credit Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CreditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FixedPaymentDueDate__c</fullName>
        <description>This field captures the fixed payment due date for this order.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Fixed payment due date for this order.</inlineHelpText>
        <label>Fixed Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_HoldSubStatus__c</fullName>
        <label>Hold Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery Block</fullName>
                </value>
                <value>
                    <fullName>Billing Block</fullName>
                </value>
                <value>
                    <fullName>Credit Block</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Incoterms__c</fullName>
        <description>This field captures the user input for Incoterms.</description>
        <inlineHelpText>The rules and terms used in international and domestic trade contracts.</inlineHelpText>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_Incoterms1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsFPD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is a flag to check whether a order contains a FPD order line or not.</description>
        <label>Order Is FPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LegacyOrderID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legacy Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderIntegrationMessage__c</fullName>
        <description>The Integration message of external callout.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderIntegrationStatus__c</fullName>
        <description>The staus of a callout made to an external system.</description>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderReason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PO__c</fullName>
        <description>This field is used to capture the user input for Purchase order number.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Purchase Order number for this order.</inlineHelpText>
        <label>Customer Purchase Order #</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Payer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the Payer for the Order.</description>
        <inlineHelpText>Payer Account for the Order.</inlineHelpText>
        <label>Payer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Payer)</relationshipLabel>
        <relationshipName>Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PurchaseOrderDate__c</fullName>
        <description>This field captures the Purchase Order date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Purchase Order Date for this Order.</inlineHelpText>
        <label>Purchase Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Region__c</fullName>
        <description>Sales Region of the Order</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPContractReference__c</fullName>
        <description>Created as part of GDASF-8818. This field will hold the SAP Contract reference (carried over from quote lines, when order is created)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Contract Reference #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPOrderNumber__c</fullName>
        <description>This field captures the order number in SAP.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Reference Order Number in SAP.</inlineHelpText>
        <label>SAP Order Number</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Agreement</label>
        <referenceTo>SalesAgreement</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to hold the lookup to Sales Area</description>
        <label>Sales Area</label>
        <referenceTo>PMC_SS_SalesArea__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShipToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to reference Shipping account.</description>
        <inlineHelpText>Ship To Account for the order.</inlineHelpText>
        <label>Ship To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Ship To Account)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SoldToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture Sold To Account for the Order.</description>
        <inlineHelpText>Sold To Account for the Order.</inlineHelpText>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cart</label>
        <referenceTo>WebCart</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_ContractEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PMC DH Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_DH_ContractStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_DH_OrderChannel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_OrderCreatedBy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Placed By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_OrderTypeCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Type Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SAPOrderCreatedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Order Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SalesChannel__c</fullName>
        <label>Sales Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                    <default>true</default>
                    <label>Others</label>
                </value>
                <value>
                    <fullName>Mosaic Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_TotalPrice__c</fullName>
        <label>Total Price</label>
        <summarizedField>OrderItem.UnitPrice</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PMC_DH_TotalQuantity__c</fullName>
        <label>Total Quantity</label>
        <summarizedField>OrderItem.Quantity</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order is contracted.</description>
        <inlineHelpText>Indicates if the order is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
        <inlineHelpText>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ContractingMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OrderBookings__c</fullName>
        <description>Total amount of all order product bookings.</description>
        <inlineHelpText>Total amount of all order product bookings.</inlineHelpText>
        <label>Order Bookings</label>
        <summarizedField>OrderItem.SBQQ__OrderProductBookings__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerm__c</fullName>
        <description>The payment term for this order.</description>
        <inlineHelpText>The payment term for this order.</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaymentTerm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatusMessage__c</fullName>
        <description>The price calculation status message.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The price calculation status message</inlineHelpText>
        <label>Price Calculation Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatus__c</fullName>
        <description>The order price calculation  job status.  It is set by the system.</description>
        <inlineHelpText>Indicates the order price calculation job status.  It is set by the system.</inlineHelpText>
        <label>Price Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__JobStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote where the order is created from.</description>
        <inlineHelpText>The quote where the order is created from.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>The estimated tax amount</description>
        <inlineHelpText>The estimated tax amount</inlineHelpText>
        <label>Estimated Tax</label>
        <summarizedField>OrderItem.SBQQ__TaxAmount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ShefaliTest__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ShefaliTest</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Test_Exchange_Rate__c</fullName>
        <description>Test field - do not delete</description>
        <label>Test Exchange Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Order_Reason__c</fullName>
        <description>Test field - do not delete</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Order Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Purchase_Order_Date__c</fullName>
        <description>Test field - do not delete</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Purchase Order Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>PMC_CPQ_SAPOrderNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_AllCompletedOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>PMC_CPQ_SAPOrderNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>All Completed Orders</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_AllInProgressOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>PMC_CPQ_SAPOrderNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>In-Progress</value>
        </filters>
        <label>All In Progress Orders</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_AllPlacedOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>PMC_CPQ_SAPOrderNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Placed</value>
        </filters>
        <label>All Placed Orders</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_MyOrder</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>PMC_CPQ_PO__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>PMC_CPQ_SAPOrderNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.CONTRACT_NUMBER</field>
            <operation>equals</operation>
        </filters>
        <label>My Order</label>
    </listViews>
    <recordTypes>
        <fullName>PMC_CPQ_Domestic</fullName>
        <active>true</active>
        <label>Domestic</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PMC_CPQ_OrdersReadOnly</fullName>
        <active>true</active>
        <description>This rule is to prevent users from editing Order record except Integration User and System Administrator.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
AND(NOT($Profile.Name = &quot;System Administrator&quot;),NOT($Profile.Name = &quot;API Only profile&quot;),NOT($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),NOT( CONTAINS($Profile.Name,&apos;Digital Hub&apos;))),
NOT(ISNEW())
)</errorConditionFormula>
        <errorMessage>This Order has been placed and is therefore locked from further modifications. Any updates from SAP will be reflected here.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Cannot_Contract_New_Order</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), SBQQ__Contracted__c)</errorConditionFormula>
        <errorDisplayField>SBQQ__Contracted__c</errorDisplayField>
        <errorMessage>Can&apos;t contract the order. Activate the order and try again.</errorMessage>
    </validationRules>
</CustomObject>